[package]
name = "maps"
version.workspace = true
edition.workspace = true

[dependencies]
maps-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace]
resolver = "3"
members = ["crates/maps-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rand = "0.9"
rand_pcg = "0.9"
maps-core = { path = "crates/maps-core" }
