[package]
name = "maps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
maps-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace]
resolver = "3"
members = ["crates/maps-core", "crates/maps-wasm"]

[profile.release]
# Small wasm binaries; harmless for the native CLI.
opt-level = "s"
lto = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# No default features: everything is seeded, and the "os_rng" default pulls
# getrandom, which does not build for wasm32-unknown-unknown out of the box.
rand = { version = "0.9", default-features = false, features = ["alloc"] }
rand_pcg = "0.9"
maps-core = { path = "crates/maps-core" }
